# microbridge

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-MIT  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md
.codex/environments/: environment.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  finalize-release.yml  pr-title.yml  release.yml
Formula/: microbridge.rb
adapters/: README.md
adapters/claude/: README.md
adapters/claude/hooks/: microbridge-permission.mjs
adapters/cnvs/: README.md
adapters/conductor/: README.md
adapters/cursor/: README.md  index.mjs
adapters/cursor-acp/: README.md
adapters/cursor/.cursor-plugin/: plugin.json
adapters/cursor/hooks/: event.mjs  hooks.json  microbridge-event.mjs  microbridge-event.test.mjs
adapters/factory/: README.md
adapters/opencode/: README.md  microbridge.mjs  microbridge.test.mjs
adapters/reference-echo/: README.md  index.mjs
adapters/sdk/: index.mjs  package.json
adapters/synara/: README.md
adapters/t3code/: README.md  index.mjs
apps/microbridge-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/microbridge-ui/src/: App.tsx  index.css
apps/microbridge-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/microbridge-ui/src-tauri/capabilities/: default.json
apps/microbridge-ui/src-tauri/icons/: icon.icns
apps/microbridge-ui/src-tauri/src/: bus.rs  lib.rs  main.rs
apps/microbridge-ui/src/assets/integrations/: README.md
apps/microbridge-ui/src/components/: DeviceEcho.tsx  DeviceTwin.tsx  IntegrationCard.tsx  MeshBackground.tsx
apps/microbridge-ui/src/lib/: autostart.ts  bus.ts  hardwareControl.test.ts  hardwareControl.ts  hosts.test.ts  hosts.ts  integrationIcons.ts  integrationSetup.test.ts  integrationSetup.ts  openHostApp.ts  popoverFit.ts  tauri.ts  theme.ts  threads.ts  types.ts  updater.test.ts  updater.ts
apps/microbridge-ui/src/surfaces/: Disconnected.tsx  Hud.tsx  Popover.tsx  Settings.tsx  surfaces.test.tsx
candidate/: microbridge.rb
crates/mb-adapters/: Cargo.toml
crates/mb-adapters/src/: claude.rs  codex.rs  cursor.rs  hosts.rs  lib.rs  title.rs  watch.rs
crates/mb-device/: Cargo.toml
crates/mb-device/src/: capture.rs  claim.rs  framing.rs  ids.rs  lib.rs  lighting.rs  probe.rs  rpc.rs
crates/mb-protocol/: Cargo.toml
crates/mb-protocol/src/: lib.rs
crates/microbridgectl/: Cargo.toml
crates/microbridgectl/src/: main.rs
crates/microbridged/: Cargo.toml
crates/microbridged/src/: app_match.rs  auto_discover.rs  claude_control.rs  cnvs.rs  codex_control.rs  config.rs  cursor_acp.rs  factory.rs  frontmost.rs  key_source.rs  lib.rs  main.rs  mcp.rs  registry.rs  socket.rs  state.rs  t3code.rs
docs/: adapters.md  architecture.md  device-hid.md  governance.md  hardware-bringup.md  lean-overhead.md  macos-signing.md  project-tracking.md  protocol.md
docs/design/: README.md
docs/releases/: v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.3.0.md  v0.3.1.md  v0.3.10.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md
docs/screenshots/: README.md
script/: build_and_run.sh
scripts/: bootstrap-linear-project.mjs  bump-formula.sh  com.ai.microbridge.daemon.plist  install-from-release.sh  install-launchd.sh  install-linux-systemd.sh  install.sh  microbridge.service  smoke-formula.sh  uninstall.sh
