[workspace]
resolver = "2"
members = [
    "crates/mb-protocol",
    "crates/mb-device",
    "crates/mb-adapters",
    "crates/microbridged",
    "crates/microbridgectl",
]

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/DevVig/microbridge"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
notify = "7"
thiserror = "2"

[profile.release]
strip = true
lto = "thin"
