[package]
name = "mb-adapters"
description = "First-party in-process adapters for Microbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mb-protocol = { path = "../mb-protocol" }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
