[package]
name = "microbridgectl"
description = "CLI for inspecting a running microbridged instance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "microbridgectl"
path = "src/main.rs"

[dependencies]
mb-protocol = { path = "../mb-protocol" }
serde_json = { workspace = true }
tokio = { workspace = true }
