[package]
name = "microbridgectl"
description = "CLI for inspecting a running microbridged instance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "microbridgectl"
path = "src/main.rs"

[features]
default = ["hid"]
## Enables the `hid-capture` command (pulls in `mb-device` + `hidapi`).
hid = ["dep:mb-device", "mb-device/hid"]

[dependencies]
mb-protocol = { path = "../mb-protocol" }
mb-device = { path = "../mb-device", optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }
