[package]
name = "microbridged"
description = "The Microbridge daemon: status bus, focus policy, device output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mb-device = { path = "../mb-device" }
mb-protocol = { path = "../mb-protocol" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
