[package]
name = "microbridged"
description = "The Microbridge daemon: status bus, focus policy, device output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "microbridged"
path = "src/main.rs"

[lib]
name = "microbridged"
path = "src/lib.rs"

[dependencies]
mb-adapters = { path = "../mb-adapters" }
mb-device = { path = "../mb-device" }
mb-protocol = { path = "../mb-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
