[package]
name = "microbridged"
description = "The Microbridge daemon: status bus, focus policy, device output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "microbridged"
path = "src/main.rs"

[lib]
name = "microbridged"
path = "src/lib.rs"

[dependencies]
mb-adapters = { path = "../mb-adapters" }
mb-device = { path = "../mb-device" }
mb-protocol = { path = "../mb-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
percent-encoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
keyring = { version = "3", default-features = false, features = ["apple-native"] }
