[package]
name = "microbridge-ui"
version = "0.0.1"
description = "Optional Microbridge menu bar companion"
authors = ["Microbridge contributors"]
edition = "2021"

[lib]
name = "microbridge_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
mb-protocol = { path = "../../../crates/mb-protocol" }

[workspace]
