[package]
name = "microbridge-ui"
version = "0.3.9"
description = "Microbridge menu bar app (primary UI)"
authors = ["Microbridge contributors"]
edition = "2021"

[lib]
name = "microbridge_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
mb-protocol = { path = "../../../crates/mb-protocol" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-service-management = "0.3.2"

[workspace]
